kubernetes/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: geolocation-engine
spec:
  selector:
    app: geolocation-engine
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
